welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (test(a,b,c))
                ^hasTeen:6: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (test(b,a,c))
                     ^hasTeen:10: error: type mismatch;
 found   : Unit
 required: Boolean
	else if (test(c,a,b))
                     ^